--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Franklin Gothic Medium';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background-image: url("/src/img/sakura.webp"); */
+  background-image: url("/src/img/sakura.webp");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -28,4 +28,5 @@ ul {
 margin: 0;
 padding: 0;
 }
+
 
